# bleuscore

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  crates.js  help.html  index.html  pyproject.toml  search-index.js  settings.html  src-files.js
.github/: dependabot.yml
.github/workflows/: CI.yml  bench.yml  bench_base.yml  bench_pr.yml  benchmark.yml  codspeed.yml  deploy.yml  doc.yml  maturin.yml  release.yml  rust.yml
benchmark/: README.md  bench.sh  bench_plot.py  compare.py  py_bleu.py  py_token.py  result.json  test_benchmark_bleu.py  test_benchmark_regex.py
benchmark/simple/: hf_evaluate.py  local_hf_bleu.py  rs_bleuscore.py  sacre_bleu.py  simulation_data.py  util.py
bindings/js/: Cargo.toml  index.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
bindings/js/src/: bleu.rs  lib.rs
bindings/python/: Cargo.toml  pyproject.toml
bindings/python/python/bleuscore/: __init__.py  __init__.pyi
bindings/python/src/: lib.rs
bindings/python/tests/: conftest.py  py_bleu.py  py_token.py  test_bleu_score.py  util.py
bleuscore/: all.html  fn.compute_score.html  index.html  sidebar-items.js  struct.BleuScore.html  struct.Tokenizer13a.html  struct.TokenizerRegex.html  trait.Tokenizer.html
bleuscore/bleu/: enum.RefLenMethod.html  fn.compute_score.html  index.html  sidebar-items.js  struct.BleuScore.html
bleuscore/ngram/: fn.get_token_ngram_counter.html  index.html  sidebar-items.js
bleuscore/tokenizer/: index.html  sidebar-items.js  struct.REGEX_ARRAY.html  struct.Tokenizer13a.html  struct.TokenizerRegex.html  trait.Tokenizer.html
bleuscore_js/: all.html  index.html  sidebar-items.js
bleuscore_js/bleu/: fn.compute_score.html  fn.log.html  index.html  sidebar-items.js  struct.BleuScore.html  struct.VecString.html  struct.VecVecString.html
bleuscore_py/: all.html  index.html
crates/bleuscore/: Cargo.toml
crates/bleuscore/benches/: README.md  bleu_bench.rs  e2e_bench.rs  ngram_bench.rs  tokenizer_bench.rs
crates/bleuscore/src/: bleu.rs  lib.rs  ngram.rs  tokenizer.rs
python/bleuscore/: __init__.py
search.desc/bleuscore/: bleuscore-desc-0-.js
search.desc/bleuscore_js/: bleuscore_js-desc-0-.js
search.desc/bleuscore_py/: bleuscore_py-desc-0-.js
search.index/: 046031ddeb.js  099d0703a8.js  0c68d0fcb0.js  0dfe0a5138.js  1152ec2763.js  13e440eac20b.js  173a9a3568.js  201dc7b316.js  203c0a2a9959.js  2bc1674121.js  41985e6e9e58.js  478c16da43ea.js  478f5796d5.js  4b1bdb3d20da.js  4e0dd010fb53.js  4f7c74da73.js  57fb2e271c.js  65d9afc39c.js  68f8b75e17ed.js  72b4c4c4c032.js  750ff8ef09ae.js  7e2576a259.js  root.js
search.index/crateNames/: 82f45c34b762.js
search.index/desc/: 74e2d10cab.js  ca91281854fb.js
search.index/entry/: 1d1e92330f.js  dc2b7546face.js
search.index/function/: 8f1e01fee4.js  c3934b1396fc.js
search.index/generic_inverted_index/: 582cf4079a.js  659c988e9889.js
search.index/name/: 7820c1377cc3.js  e0a0e78d9f.js
search.index/normalizedName/: 63d0a031da.js  84bead88185b.js
search.index/path/: 0435f5d98b.js  56825e69dcc1.js
search.index/type/: 1954b935cb.js  a22ff3a9b995.js
src/: bleu.rs  lib.rs  main.rs  ngram.rs  tokenizer.rs
src/bleuscore/: bleu.rs.html  lib.rs.html  ngram.rs.html  tokenizer.rs.html
src/bleuscore_js/: bleu.rs.html  lib.rs.html
src/bleuscore_py/: lib.rs.html
tests/: py_bleu.py  test_bleu_score.py  test_tokenizer.py  util.py
trait.impl/bleuscore/tokenizer/: trait.Tokenizer.js
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.Eq.js  trait.PartialEq.js
trait.impl/core/convert/: trait.AsRef.js  trait.From.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/fmt/: trait.Debug.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js  trait.UnsafeUnpin.js
trait.impl/core/ops/deref/: trait.Deref.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
trait.impl/lazy_static/: trait.LazyStatic.js
trait.impl/serde/de/: trait.Deserialize.js
trait.impl/serde/ser/: trait.Serialize.js
trait.impl/serde_core/de/: trait.Deserialize.js
trait.impl/serde_core/ser/: trait.Serialize.js
trait.impl/tsify/: trait.Tsify.js
trait.impl/wasm_bindgen/__rt/marker/: trait.ErasableGeneric.js
trait.impl/wasm_bindgen/cast/: trait.JsCast.js
trait.impl/wasm_bindgen/convert/traits/: trait.FromWasmAbi.js  trait.IntoJsGeneric.js  trait.IntoWasmAbi.js  trait.LongRefFromWasmAbi.js  trait.OptionFromWasmAbi.js  trait.OptionIntoWasmAbi.js  trait.RefFromWasmAbi.js  trait.UpcastFrom.js  trait.VectorFromWasmAbi.js  trait.VectorIntoWasmAbi.js
trait.impl/wasm_bindgen/describe/: trait.WasmDescribe.js  trait.WasmDescribeVector.js
trait.impl/wasm_bindgen/sys/: trait.Promising.js
webapp/: README.md  app.js  index.html  package-lock.json  package.json  webpack.config.js
