[package]
name = "bleuscore"
version = "0.1.2"
edition = "2021"
authors = ["Mathew Shen <datahonor@gmail.com>"]
repository = "https://github.com/shenxiangzhuang/bleuscore"
readme = "README.md"
license = "MIT"
description = "A fast(not yet :) bleu score calculator"
keywords = ["NLP", "Tokenizer", "BLEU", "DeepLearning"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bleuscore"
crate-type = ["cdylib", "rlib"]

[dependencies]
cached = "0.50.0"
regex = "1.10.4"
lazy_static = "1.4.0"
counter = "0.5.7"
rayon = "1.10.0"
ahash = "0.8.11"

[dependencies.pyo3]
version = "0.21.1"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["abi3-py38"]
