[package]
name = "bleuscore-js"
version.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
keywords.workspace = true
description.workspace = true
readme.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
bleuscore = { version = ">=0.1.4", path = "../../crates/bleuscore" }
wasm-bindgen = "0.2.100"
getrandom = { version = "0.3", features = ["wasm_js"] }
js-sys = "0.3.77"
tsify = "0.5.5"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
