[package]
name = "bleuscore-python"
publish = false
version = "0.1.3"
edition = "2024"

[dependencies]
bleuscore = { version = "0.1.3", path = "../../crates/bleuscore" }

[dependencies.pyo3]
version = "0.25.0"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["abi3-py38"]
