[package]
name = "bleuscore-py"
version.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
keywords.workspace = true
description.workspace = true
publish = false

[dependencies]
bleuscore = { version = ">=0.1.4", path = "../../crates/bleuscore" }

[dependencies.pyo3]
version = "0.25.0"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["abi3-py38"]
