[package]
name = "bleuscore"
version.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
keywords.workspace = true
description.workspace = true
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bleuscore"
crate-type = ["cdylib", "rlib"]

[dependencies]
cached.workspace = true
regex.workspace = true
lazy_static.workspace = true
rayon.workspace = true
ahash.workspace = true
getrandom.workspace = true