[package]
name = "bleuscore"
version.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
keywords.workspace = true
description.workspace = true
readme.workspace = true
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bleuscore"
crate-type = ["cdylib", "rlib"]

[dependencies]
cached.workspace = true
regex.workspace = true
lazy_static.workspace = true
rayon.workspace = true
ahash.workspace = true
getrandom.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
divan = { version = "4.1.0", package = "codspeed-divan-compat" }

[[bench]]
name = "bleu_bench"
harness = false

[[bench]]
name = "tokenizer_bench"
harness = false

[[bench]]
name = "ngram_bench"
harness = false

[[bench]]
name = "e2e_bench"
harness = false
